<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SolarPCRHQ</string>
    <string name="app_name_full">SolarPCR Headquarter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="temp_trend">Temperature Trend</string>
    <string name="flow_control">Flow Controller</string>
    <string name="fluo_lab">Fluorescense Lab</string>
    <string name="denature">Denaturation</string>
    <string name="extense">Extension</string>
    <string name="anneal">Annealing</string>
    <string name="cel">23.75`C</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting\u2026</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices\u2026</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

</resources>
