<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >
    <!-- 
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    
    	<TextView
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
        	android:paddingLeft="5dp"
	        android:text="Received: "
	        android:textSize="8sp"
    	/>
    	<TextView
        	android:id="@+id/tvSerial"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    	    android:textSize="8sp"
    	/>
    </LinearLayout> -->
    
    
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#EEEEEE" >
        
        <TextView
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/temp_trend"
            android:textColor="#000000"
            android:textSize="15.0dip" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/flow_control"
            android:textColor="#000000"
            android:textSize="15.0dip" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/fluo_lab"
            android:textColor="#000000"
            android:textSize="15.0dip" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:scaleType="matrix"
        android:src="@drawable/roller" />

    

     <zhengda.solarcholera.MyViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" > 
        
        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pagertitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:background="#0000"
            android:textColor="#ffff" />
        
		</zhengda.solarcholera.MyViewPager>

<!--       <ScrollView
        android:id="@+id/svText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textColor="#000000"
                android:text="Oncoming data: " />
            
            <TextView
                android:id="@+id/tvSerial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:text="" />

        </LinearLayout>
    </ScrollView>
    -->
    
</LinearLayout>
